--- a/src/scss/painel/_painel.scss
+++ b/src/scss/painel/_painel.scss
@@ -326,6 +326,10 @@ body {
                         padding: 32px;
                         padding-top: 0;
 
+                        #alterar-senha {
+                            display: none;
+                        }
+
                         .conteudo {
                             fieldset {
                                 @media screen and(max-width: 991px) {
